--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
         sync: false
       - key: GEMINI_API_KEY
         sync: false
-      - key: FRONTEND_URL
+      - key: ALLOWED_ORIGINS
         sync: false
       - key: PYTHON_VERSION
         value: 3.11.4
