--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,13 @@ services:
     runtime: python
     rootDir: ai_quiz_generator/backend
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT --workers 1
     envVars:
       - key: GROQ_API_KEY
         sync: false
       - key: GEMINI_API_KEY
         sync: false
       - key: ALLOWED_ORIGINS
-        sync: false
+        value: "*"
       - key: PYTHON_VERSION
         value: 3.11.4
